# DarkMatter

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
SandboxGame/: CMakeLists.txt  main.cpp
ci/toolchains/: clangcl-toolchain.cmake  msvc-toolchain.cmake
cmake/: CompilerSpecific.cmake  EmbedResource.cmake  EmbeddedResource.h.inl
include/DarkMatter/: DarkMatter.h  ExportAPI.h  IEngine.h  IGame.h  ILoggerManager.h  definitions.h
include/DarkMatter/Events/: Event.h  KeyEvent.h  MouseEvent.h
include/DarkMatter/Game/: BaseGame.h  Window.h
scripts/: EmbedResource.py  EmbedResources.py
src/DarkMatter/: CMakeLists.txt  pch.cpp  pch.h
src/DarkMatter/Engine/: Engine.cpp  Engine.h  LoggerManager.cpp  LoggerManager.h  ThreadPool.cpp  ThreadPool.h  Window.cpp  Window.h
src/DarkMatter/Game/: BaseGame.cpp  Window.cpp
src/DarkMatter/Renderer/: IRenderer.h  Renderer.cpp  Renderer.h  RendererBuilder.cpp  RendererBuilder.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRenderer.cpp  VulkanRenderer.h
src/DarkMatter/Shaders/: basic.frag.glsl
